[project]
name = "chessli2"
version = "0.1.0"
description = "Free and open-source chess trainer"
authors = [
    { name = "Pascal Wenker", email = "pwenker@posteo.de" }
]
dependencies = [
    "berserk>=0.13.2",
    "pydantic-settings>=2.1.0",
    "pydantic>=2.5.3",
    "chess>=1.10.0",
    "gradio_calendar>=0.0.4",
    "gradio>=4.29.0",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
