[project]
name = "chessli2"
version = "0.1.0"
description = "Free and open-source chess trainer"
authors = [
    { name = "Pascal Wenker", email = "pwenker@posteo.de" }
]
dependencies = [
    "berserk>=0.13.2",
    "pydantic-settings>=2.1.0",
    "pydantic>=2.5.3",
    "chess>=1.10.0",
    "gradio_calendar>=0.0.4",
    "gradio>=4.29.0",
    "tabulate>=0.9.0",
    "typer>=0.12.3",
    "polars>=0.20.31",
    "gradio_rangeslider>=0.0.1",
    "tqdm>=4.66.4",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
chessli2 = "chessli2.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-sugar>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true
